objects/ASI_HK_CRM_Visitation_Plan_Detail__c.object
<CustomObject>
    <description>ASI HK CRM - Visitation Plan Detail</description>
    <fields>
        <fullName>ASI_CRM_Account_Inactive__c</fullName>
        <formula>ASI_HK_CRM_Account__r.ASI_HK_CRM_Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actions_To_Be_Taken__c</fullName>
        <label>Actions To Be Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address_in_Map__c</fullName>
        <formula>HYPERLINK(&apos;http://www.google.com/maps/place/&apos; &amp;  ASI_CRM_Location_Latitude__c &amp; &quot;,&quot; &amp; ASI_CRM_Location_Longitude__c &amp; &quot;/@&quot; &amp; ASI_CRM_Location_Latitude__c &amp; &quot;,&quot; &amp; ASI_CRM_Location_Longitude__c &amp; &quot;,17z&quot;, &apos;Show Google Map&apos; , &apos;_blank&apos;)</formula>
        <label>Address in Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Paperwork</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s Event</fullName>
                </value>
                <value>
                    <fullName>Market Visit</fullName>
                </value>
                <value>
                    <fullName>Trade Dinner</fullName>
                </value>
                <value>
                    <fullName>Business Suspended</fullName>
                </value>
                <value>
                    <fullName>Company Event</fullName>
                </value>
                <value>
                    <fullName>Meeting / Company Event</fullName>
                </value>
                <value>
                    <fullName>Join Incentive Trip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Check_In_Geolocation__c</fullName>
        <label>Check In Geolocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Check_In_Location__c</fullName>
        <label>Check In Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Check_Out_Geolocation__c</fullName>
        <label>Check Out Geolocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Check_Out_Location__c</fullName>
        <label>Check Out Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Competitor_Feedback__c</fullName>
        <label>Competitor Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Competitor_Market__c</fullName>
        <label>Competitor/Market</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Negotiation_Update__c</fullName>
        <label>Contract Negotiation Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_Capacity__c</fullName>
        <label>Current Capacity (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_Difference_Actual_Planned__c</fullName>
        <formula>IF(ISBLANK(TODAY()- ASI_HK_CRM_Visit_Date__c),0,TODAY()- ASI_HK_CRM_Visit_Date__c)</formula>
        <label>Date Difference (Actual - Planned)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Bottles1__c</fullName>
        <label>Facing Actual 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Bottles_10__c</fullName>
        <label>Facing Actual 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Bottles_2__c</fullName>
        <label>Facing Actual 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Bottles_3__c</fullName>
        <label>Facing Actual 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Competitor_Bottles_10__c</fullName>
        <label>Competitor Facing Actual 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Competitor_Bottles_1__c</fullName>
        <label>Competitor Facing Actual 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Competitor_Bottles_2__c</fullName>
        <label>Competitor Facing Actual 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Competitor_Sub_brand10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Displayed Competitor Sub-brand 10</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Displayed Competitor Sub-brand 10)</relationshipLabel>
        <relationshipName>Visitation_Plan_DetailsCgBm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Competitor_Sub_brand_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Displayed Competitor Sub-brand 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_CRM_SG_Competitor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Displayed Competitor Sub-brand 1)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details15</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Competitor_Sub_brand_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Displayed Competitor Sub-brand 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_CRM_SG_Competitor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Displayed Competitor Sub-brand 2)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details16</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Competitor_Sub_brand_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Displayed Competitor Sub-brand 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_CRM_SG_Competitor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Displayed Competitor Sub-brand 3)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details17</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Sub_brand_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Displayed Sub-brand 10</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Displayed Sub-brand 10)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Sub_brand_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Displayed Sub-brand 1</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details</relationshipLabel>
        <relationshipName>Visitation_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Displayed_Sub_brand_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Displayed Sub-brand 2</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Displayed Sub-brand 2)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Dominated_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dominated Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Dominated Sub-brand)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Dominated_Type_of_Serve__c</fullName>
        <label>Dominated Type of Serve</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>Mixed/Long Drink</fullName>
                </value>
                <value>
                    <fullName>Cocktail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Follow_up__c</fullName>
        <label>Follow-up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Liquor_Shop_1__c</fullName>
        <label>GMA Sighting Liquor Shop 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Liquor_Shop_2__c</fullName>
        <label>GMA Sighting Liquor Shop 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Liquor_Shop_3__c</fullName>
        <label>GMA Sighting Liquor Shop 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Quantity_1__c</fullName>
        <label>GMA Sighting Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Quantity_2__c</fullName>
        <label>GMA Sighting Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Quantity_3__c</fullName>
        <label>GMA Sighting Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Sub_brand_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GMA Sighting Sub-brand 1</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (GMA Sighting Sub-brand 1)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Sub_brand_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GMA Sighting Sub-brand 2</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (GMA Sighting Sub-brand 2)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting_Sub_brand_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GMA Sighting Sub-brand 3</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (GMA Sighting Sub-brand 3)</relationshipLabel>
        <relationshipName>Visitation_Plan_Details8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_Sighting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMA Sighting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GPS_Location__c</fullName>
        <label>GPS Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_General_Feedbacks__c</fullName>
        <label>General Feedbacks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Glorifier__c</fullName>
        <label>Glorifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Last_Distance_Calculation__c</fullName>
        <label>Last Distance Calculation (meter)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latitude_Customer__c</fullName>
        <formula>ASI_CRM_MY_Customer__r.ASI_CRM_Latitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latitude (Customer)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latitude_Last_Modified__c</fullName>
        <label>Latitude (Last Modified)</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latitude__c</fullName>
        <label>Latitude (Initial)</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location_Initial__c</fullName>
        <label>Location (Initial)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outlet</fullName>
                </value>
                <value>
                    <fullName>Office (North)</fullName>
                </value>
                <value>
                    <fullName>Office (North 2)</fullName>
                </value>
                <value>
                    <fullName>Office (South)</fullName>
                </value>
                <value>
                    <fullName>Office (Central)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Unknown Outlet Geolocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location_Last_Modified__c</fullName>
        <label>Location (Last Modified)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outlet</fullName>
                </value>
                <value>
                    <fullName>Office (North)</fullName>
                </value>
                <value>
                    <fullName>Office (North 2)</fullName>
                </value>
                <value>
                    <fullName>Office (South)</fullName>
                </value>
                <value>
                    <fullName>Office (Central)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Unknown Outlet Geolocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location_Latitude__c</fullName>
        <formula>Text(ASI_CRM_GPS_Location__Latitude__s)</formula>
        <label>Location Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location_Longitude__c</fullName>
        <formula>Text(ASI_CRM_GPS_Location__Longitude__s)</formula>
        <label>Location Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Longitude_Customer__c</fullName>
        <formula>ASI_CRM_MY_Customer__r.ASI_CRM_Longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longitude (Customer)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Longitude_Last_Modified__c</fullName>
        <label>Longitude (Last Modified)</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Longitude__c</fullName>
        <label>Longitude (Initial)</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_BarDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bar Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Visitation Plan Details</relationshipLabel>
        <relationshipName>Visitation_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_OwnActivationRemark__c</fullName>
        <label>Own Activation Brand Name / Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Own_Activations__c</fullName>
        <label>Own Activations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Planogram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planogram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ON_OFF__c</fullName>
        <formula>TEXT(ASI_HK_CRM_Visitation_Plan__r.Owner:User.ASI_CRM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ON/OFF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Objective_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Objective Met?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Competitor_Activities__c</fullName>
        <label>Competitor Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Tasting</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Feedback__c</fullName>
        <label>Store Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PG_Activities__c</fullName>
        <label>PG Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PG_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Podium_Stand__c</fullName>
        <label>Podium Stand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Shelve__c</fullName>
        <label>Product Shelve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Proposal__c</fullName>
        <label>Promotion Proposal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>Normal Visit</fullName>
                </value>
                <value>
                    <fullName>Promotion Discussion</fullName>
                </value>
                <value>
                    <fullName>Outside Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSM__c</fullName>
        <formula>ASI_HK_CRM_Visitation_Plan__r.Owner:User.Manager.FirstName + &apos; &apos; +  ASI_HK_CRM_Visitation_Plan__r.Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Signage__c</fullName>
        <label>Signage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Product_Display__c</fullName>
        <label>Product Display</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>Ballantine’s</fullName>
                </value>
                <value>
                    <fullName>TGL</fullName>
                </value>
                <value>
                    <fullName>Ricard</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Havana</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>Mumm</fullName>
                </value>
                <value>
                    <fullName>Perrier Jouet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_To_be_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To be Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type_of_Visit__c</fullName>
        <label>Type of Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Non Sales Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VIP_Room__c</fullName>
        <label>VIP Room</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Endcap__c</fullName>
        <label>Endcap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Has_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Island__c</fullName>
        <label>Island</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_No_of_Facing_10__c</fullName>
        <label>No. of Facing 10</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_No_of_Facing_1__c</fullName>
        <label>No. of Facing 1</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_No_of_Facing_2__c</fullName>
        <label>No. of Facing 2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Number_of_PG__c</fullName>
        <label>Number of PG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_PG_Employment_Month__c</fullName>
        <label>PG Employment Period (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_PG_End_Date__c</fullName>
        <label>PG End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_PG_Start_Date__c</fullName>
        <label>PG Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_PG_Working_Hour__c</fullName>
        <label>PG Working Hour</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Product_Listing__c</fullName>
        <label>Product Listing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut Elyx</fullName>
                </value>
                <value>
                    <fullName>Absolut Vodka</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s 12 Year Old</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s 17 Year Old</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s 21 Year Old</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s 30 Year Old</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s Finest</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate</fullName>
                </value>
                <value>
                    <fullName>Café de Paris</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo</fullName>
                </value>
                <value>
                    <fullName>Chivas 18YO Blue Signature</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 12YO 75cl</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 18YO 70cl</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 25YO 70cl</fullName>
                </value>
                <value>
                    <fullName>G.H.MUMM Cordon Rouge</fullName>
                </value>
                <value>
                    <fullName>G.H.MUMM CORDON ROUGE BRUT</fullName>
                </value>
                <value>
                    <fullName>G.H.MUMM Le ROSE</fullName>
                </value>
                <value>
                    <fullName>George Wyndham</fullName>
                </value>
                <value>
                    <fullName>Graffigna</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek Chardonnay</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek Reserve</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek Shiraz</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek Shiraz Cabernet</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek WMS</fullName>
                </value>
                <value>
                    <fullName>Jacob’s Creek Heritage</fullName>
                </value>
                <value>
                    <fullName>Jameson Gold Reserve</fullName>
                </value>
                <value>
                    <fullName>Jameson Standard</fullName>
                </value>
                <value>
                    <fullName>Martell Chanteloup Perspective</fullName>
                </value>
                <value>
                    <fullName>Martell Cordon Bleu</fullName>
                </value>
                <value>
                    <fullName>Martell Noblige</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_10__c</fullName>
        <label>Stock Balance 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_1__c</fullName>
        <label>Stock Balance 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_2__c</fullName>
        <label>Stock Balance 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_Small_1__c</fullName>
        <label>Stock Balance (Small) 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_Small_2__c</fullName>
        <label>Stock Balance (Small) 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_Small_3__c</fullName>
        <label>Stock Balance (Small) 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_Sub_Brand10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand10</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Sub-brand10)</relationshipLabel>
        <relationshipName>Visitation_Plan_DetailsCgER</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_Sub_Brand1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand1</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Sub-brand1)</relationshipLabel>
        <relationshipName>Visitation_Plan_DetailsCfxx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Stock_Balance_Sub_Brand2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand2</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details (Sub-brand2)</relationshipLabel>
        <relationshipName>Visitation_Plan_DetailsCfyM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Time_In__c</fullName>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Time_Out__c</fullName>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
</CustomObject>